force-app/main/default/objects/Customer_Portal_Setting__c/Customer_Portal_Setting__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Customer Portal Setting</description>
    <label>Customer Portal Setting</label>
</CustomObject>