force-app/main/default/objects/Customer_Portal_Setting__c/fields/Account_Results_page__c.field-meta.xml
<CustomField>
    <fullName>Account_Results_page__c</fullName>
    <description>Accounts Results page URL</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Accounts Results page URL</inlineHelpText>
    <label>Account Results page</label>
    <length>255</length>
    <type>Text</type>
</CustomField>