force-app/main/default/objects/Customer_Portal_Setting__c/fields/Canaccede_Customer_RecordTypeID__c.field-meta.xml
<CustomField>
    <fullName>Canaccede_Customer_RecordTypeID__c</fullName>
    <description>Canaccede Customer RecordType ID</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Canaccede Customer RecordType ID</inlineHelpText>
    <label>Canaccede Customer RecordTypeID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>