force-app/main/default/objects/Customer_Portal_Setting__c/fields/Customer_Registration_Page__c.field-meta.xml
<CustomField>
    <fullName>Customer_Registration_Page__c</fullName>
    <description>Customer Registration Page</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Customer Registration Page</inlineHelpText>
    <label>Customer Registration Page</label>
    <length>255</length>
    <type>Text</type>
</CustomField>