force-app/main/default/objects/Customer_Portal_Setting__c/fields/Customer_Verification_Expiration_Days__c.field-meta.xml
<CustomField>
    <fullName>Customer_Verification_Expiration_Days__c</fullName>
    <description>Customer Verification Expiration Days</description>
    <inlineHelpText>Customer Verification Expiration Days</inlineHelpText>
    <label>Customer Verification Expiration Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>