force-app/main/default/objects/Customer_Portal_Setting__c/fields/Customer_Verification_URL__c.field-meta.xml
<CustomField>
    <fullName>Customer_Verification_URL__c</fullName>
    <description>Customer Verification URL</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Customer Verification URL</inlineHelpText>
    <label>Customer Verification URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>