force-app/main/default/objects/Customer_Portal_Setting__c/fields/Distressed_Product_RecordTypeID__c.field-meta.xml
<CustomField>
    <fullName>Distressed_Product_RecordTypeID__c</fullName>
    <description>Distressed Product RecordType ID</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Distressed Product RecordType ID</inlineHelpText>
    <label>Distressed Product RecordTypeID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>