force-app/main/default/objects/Customer_Portal_Setting__c/fields/Eligible_Placement_ID__c.field-meta.xml
<CustomField>
    <fullName>Eligible_Placement_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Eligible Placement ID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>