force-app/main/default/objects/Customer_Portal_Setting__c/fields/Error_page_URL__c.field-meta.xml
<CustomField>
    <fullName>Error_page_URL__c</fullName>
    <description>URL of the page to redirect when any error occur in portal</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>URL of the page to redirect when any error occur in portal</inlineHelpText>
    <label>Error page URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>