force-app/main/default/objects/Customer_Portal_Setting__c/fields/Exclude_Account_Purchase_Group__c.field-meta.xml
<CustomField>
    <fullName>Exclude_Account_Purchase_Group__c</fullName>
    <description>Account Purchase Groups to exclude from Portal Search with comma separated values</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Account Purchase Groups to exclude from Portal Search with comma separated values</inlineHelpText>
    <label>Exclude Account Purchase Group</label>
    <length>255</length>
    <type>Text</type>
</CustomField>