force-app/main/default/objects/Customer_Portal_Setting__c/fields/Exclude_Portfolio_Name__c.field-meta.xml
<CustomField>
    <fullName>Exclude_Portfolio_Name__c</fullName>
    <description>Exclude Portfolio Group Name From Portal Search</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Exclude Portfolio Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>