force-app/main/default/objects/Customer_Portal_Setting__c/fields/iFrameDomain__c.field-meta.xml
<CustomField>
    <fullName>iFrameDomain__c</fullName>
    <description>iFrameDomain URL</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>iFrameDomain URL</inlineHelpText>
    <label>iFrameDomain</label>
    <length>255</length>
    <type>Text</type>
</CustomField>