force-app/main/default/objects/Customer_Portal_Setting__c/fields/Secret_Code_Expiration_Days__c.field-meta.xml
<CustomField>
    <fullName>Secret_Code_Expiration_Days__c</fullName>
    <description>Secret Code Expiration Days</description>
    <inlineHelpText>Secret Code Expiration Days</inlineHelpText>
    <label>Secret Code Expiration Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>